dnl 
dnl configure.in 
dnl
dnl Copyright (C) Jun 2002, Volker Jahns (Volker.Jahns@thalreit.de)
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT(libwth.c)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(wth, 0.4.3)
AM_CONFIG_HEADER(config.h)
AC_DEFINE(_GNU_SOURCE)
#AC_DEFINE_UNQUOTED(CPU_VENDOR_OS, "$host_os")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Compiler checks
dnl include directories may be /usr/local/include
WTH_INC="-I/usr/local/include/"
CPPFLAGS="$CPPFLAGS ${WTH_INC}"

dnl Define a macro according to the system type
case "$target" in
        i[[3456]]86-*-linux) ARCH="-DLINUX" ;;
        i[[3456]]86-*-freebsd*) ARCH="-DFREEBSD" ;;
esac
CFLAGS="$CFLAGS $ARCH -Wall"
#AC_MSG_ERROR(CFLAGS: $CFLAGS)
AC_SUBST(CFLAGS)


dnl WTH_LIBS="-L/usr/local/lib/"
dnl LIBS="$LIBS $WTH_LIBS"

dnl Checks for libraries.
dnl test purposes
dnl AC_CHECK_LIB(pthread, pthread_create)
dnl AC_CHECK_LIB(nsl, gethostbyaddr)
dnl AC_CHECK_LIB(socket, socket)
dnl AC_CHECK_LIB(xmlrpc, xmlrpc_parse_value, , AC_MSG_ERROR(wth needs libxmlrpc))
dnl AC_CHECK_LIB(xmlrpc_abyss, xmlrpc_server_abyss_init, , AC_MSG_ERROR(wth needs libxmlrpc_abyss))

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h strings.h sys/ioctl.h syslog.h unistd.h)
AC_CHECK_HEADERS(xmlrpc.h xmlrpc_client.h xmlrpc_abyss.h, ,
  AC_MSG_ERROR(xmlrpc headers not found - check at http://xmlrpc-c.sourceforge.net!))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime select socket strcspn strdup strerror strspn)

AC_OUTPUT(Makefile)


