dnl 
dnl configure.in 
dnl
dnl Copyright (C) Jun 2002,2005 Volker Jahns (Volker.Jahns@thalreit.de)
dnl
dnl Process this file with autoconf to produce a configure script.
USE_AUTOHEADER

AC_INIT(wthd.c)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(wth, 0.5.0)
AM_CONFIG_HEADER(config.h)
AC_DEFINE([_GNU_SOURCE], [], [Description])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Compiler checks
dnl include directories may be /usr/local/include
WTH_INC="-I/usr/local/include/ -I/usr/include"
CPPFLAGS="$CPPFLAGS ${WTH_INC}"

dnl Define a macro according to the system type
case "$target" in
        i[[3456]]86-*-linux) ARCH="-DLINUX" ;;
        i[[3456]]86-*-freebsd*) ARCH="-DFREEBSD" ;;
esac
CFLAGS="$CFLAGS $ARCH -Wall"
#AC_MSG_ERROR(CFLAGS: $CFLAGS)
AC_SUBST(CFLAGS)

dnl WTH_LIBS="-L/usr/local/lib/"
dnl LIBS="$LIBS $WTH_LIBS"

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h strings.h sys/ioctl.h syslog.h unistd.h)
AC_CHECK_HEADERS(sqlite3.h, , AC_MSG_ERROR(sqlite3 headers not found. Please install first.), )
AC_CHECK_HEADERS(pthreads.h, , AC_MSG_ERROR(pthreads headers not found. Please install first.), )


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime select socket strcspn strdup strerror strspn)

AC_OUTPUT(Makefile)
