dnl Process this file with autoconf to produce a configure script.
AC_INIT(wth.h)
AM_INIT_AUTOMAKE(wth, 0.03)
AC_DEFINE(_GNU_SOURCE)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h strings.h sys/ioctl.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime select socket strcspn strdup strerror strspn)

AC_OUTPUT(Makefile)
